--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     command: python manage.py runserver
     ports:
       - "80:8000"
+    environment:
+      - TZ=Asia/Almaty
     volumes:
       - .:/app
